2021-03-11  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-shell--bufwin): Redefine and make unused variable useful.
	(diredc-shell-kill, diredc-shell): Use it, to return control to
	parent window unpoin buffer being killed.

2021-01-12  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--advice--wdired-exit): Preserve
	bonus-configuration options on all exits from wdired mode
	(diredc--hook-function): Properly handle all exits from wdired mode.

2021-01-12  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-browse-mode): Ensure all data is cleaned upon
	exiting mode, handle opening not being on file line.
	(diredc-browse--hook-function): Handle gpg files and file insert
	errors.
	(diredc-exit): Ensure clean exit of diredc-browse-mode when
	exiting diredc.

2021-01-12  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-browse--hook-function): Re-use the same single dired
	browse buffer for all files, with `use insert-file-contents'
	instead of find-file. Display an explanation for unviewable dired lines.
	(diredc-browse-mode): Properly un-dedicate and re-dedicate window
	on exiting mode.
	(diredc-hist-change-directory, diredc-hist-up-directory)
	(diredc-hist-select, diredc-hist-duplicate)
	(diredc-hist-find-alternate-file): Improve dedication of window to
	diredc.

2020-12-29  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-hist--prune-deleted-directories): Move
	function in file.
	(diredc--abort-on-directory-deleted)
	(diredc--ask-on-directory-deleted): New functions.
	(diredc-hist-change-directory, diredc-hist-up-directory)
	(diredc-hist-duplicate, diredc-hist-find-alternate-file): Perform
	diredc-hist--prune-deleted-directories.
	(diredc-hist-up-directory, diredc-hist-duplicate)
	(diredc-hist-find-alternate-file): Handle case of current
	directory deleted.
	(diredc-hist-up-directory): Improve method of navigating to parent
	directories.
	(diredc-wdired): New wrapper function to handle case of current
	directory deleted.